<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Face Changer Photo Editor</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_adjust_skin_tone">Adjust Skin</string>
    <string name="Add_color_Effect">Color Effect</string>

    <string name="thimName">thimname</string>
    <string name="pink">pink</string>
    <string name="orange">orange</string>
    <string name="deep_orange">deep orange</string>
    <string name="lingh_blue">light blue</string>
    <string name="light_green">light green</string>
    <string name="indigo">indigo</string>
    <string name="perple">perple</string>
    <string name="red">red</string>
    <string name="teal">teal</string>
    <string name="take_photo">Take Photo</string>
    <string name="internal_storage">Internal storage</string>
    <string name="error_apply_effect">Oops! please try again.</string>

    <string name="choose_from_gallery">Choose from Library</string>
    <string name="cancel">Cancel</string>
    <string name="add_photo"> Add Photo!</string>
    <string name="device_not_support">Sorry – your device doesn’t support the crop action!</string>
    <string name="default_txt">Default</string>
    <string name="atmosphere">Atmostphere</string>
    <string name="bunga">Bunga Melathi Puthi</string>
    <string name="earth">Earth Aircraft Universe</string>
    <string name="jumping">Jumping Running</string>
    <string name="pick_color">Pick a Color!</string>
    <string name="saving">Saving...</string>
    <string name="processing">Processing...</string>
    <string name="test">test</string>
    <string name="text">Text</string>
    <string name="settings">Settings</string>
    <string name="rotate">Rotate</string>
    <string name="effects">Effects</string>


    <string name="title_ear">Ear</string>
    <string name="title_hair">Hair</string>
    <string name="title_moutch">moutch</string>
    <string name="title_tarban">tarban</string>


    <array name="templates_ear">
        <item>@drawable/img_ear_1</item>
        <item>@drawable/img_ear_2</item>
        <item>@drawable/img_ear_3</item>
        <item>@drawable/img_ear_4</item>
        <item>@drawable/img_ear_5</item>
        <item>@drawable/img_ear_6</item>
        <item>@drawable/img_ear_7</item>
        <item>@drawable/img_ear_8</item>
        <item>@drawable/img_ear_9</item>
        <item>@drawable/img_ear_10</item>
        <item>@drawable/img_ear_11</item>
        <item>@drawable/img_ear_12</item>
        <item>@drawable/img_ear_13</item>
        <item>@drawable/img_ear_14</item>
        <item>@drawable/img_ear_15</item>

    </array>

    <array name="templates_hair">
        <item>@drawable/hair_1</item>
        <item>@drawable/hair_2</item>
        <item>@drawable/hair_3</item>
        <item>@drawable/hair_4</item>
        <item>@drawable/hair_5</item>
        <item>@drawable/hair_6</item>
        <item>@drawable/hair_7</item>
        <item>@drawable/hair_8</item>
        <item>@drawable/hair_9</item>
        <item>@drawable/hair_10</item>
        <item>@drawable/hair_11</item>
        <item>@drawable/hair_12</item>
        <item>@drawable/hair_13</item>
        <item>@drawable/hair_14</item>
        <item>@drawable/hair_15</item>
        <item>@drawable/hair_16</item>
        <item>@drawable/hair_17</item>
        <item>@drawable/hair_18</item>
        <item>@drawable/hair_19</item>
        <item>@drawable/hair_20</item>
        <item>@drawable/hair_21</item>
        <item>@drawable/hair_22</item>
        <item>@drawable/hair_23</item>
        <item>@drawable/hair_24</item>
        <item>@drawable/hair_25</item>
        <item>@drawable/hair_26</item>
        <item>@drawable/hair_27</item>
    </array>

    <array name="templates_moustche">
        <item>@drawable/moustache_1</item>
        <item>@drawable/moustache_2</item>
        <item>@drawable/moustache_3</item>
        <item>@drawable/moustache_4</item>
        <item>@drawable/moustache_5</item>
        <item>@drawable/moustache_6</item>
        <item>@drawable/moustache_7</item>
        <item>@drawable/moustache_8</item>
        <item>@drawable/moustache_9</item>
        <item>@drawable/moustache_10</item>
        <item>@drawable/moustache_11</item>
        <item>@drawable/moustache_12</item>
        <item>@drawable/moustache_13</item>
        <item>@drawable/moustache_14</item>
        <item>@drawable/moustache_15</item>
        <item>@drawable/moustache_16</item>
        <item>@drawable/moustache_17</item>
        <item>@drawable/moustache_18</item>
        <item>@drawable/moustache_19</item>
        <item>@drawable/moustache_20</item>
        <item>@drawable/moustache_21</item>
        <item>@drawable/moustache_22</item>
        <item>@drawable/moustache_23</item>
        <item>@drawable/moustache_24</item>
        <item>@drawable/moustache_25</item>
        <item>@drawable/moustache_26</item>
        <item>@drawable/moustache_27</item>
        <item>@drawable/moustache_28</item>
        <item>@drawable/moustache_29</item>
        <item>@drawable/moustache_30</item>

    </array>

    <array name="templates_tarban">
         <item>@drawable/tarban_aa</item>
        <item>@drawable/tarban_bb</item>
        <item>@drawable/tarban_cc</item>
        <item>@drawable/tarban_dd</item>
        <item>@drawable/tarban_ee</item>
        <item>@drawable/tarban_ff</item>


    </array>

    <!-- custom_setting_dialog -->
    <string name="textsize">TextSize</string>
    <string name="color">Color</string>
    <string name="italic">Italic</string>
    <string name="bold">BOLD</string>
    <string name="font">Font</string>
    <string name="button1_ok">OK</string>

    <string name="lab_ear">Ear</string>
    <string name="lab_hair">Hair</string>
    <string name="lab_moustache">Moustache</string>
    <string name="lab_tarban">Tarban</string>
    <string name="lab_frame">Frame</string>



    <string name="fulladd_id">ca-app-pub-4575353172433876/3094704544</string>
    <string name="banneradd_id">ca-app-pub-4575353172433876/9141238141</string>
    <string name="progress_title">Processing..</string>

    <string name="done">Done</string>


    <string-array name="tab_titles">
        <item>Camera</item>
        <item>Gallery</item>
    </string-array>


    <string name="toolbar_title">Choice Image</string>
    <string name="no_image">No Image</string>
    <string name="selected_image">Selected Image</string>
    <string name="max_count_msg">%1$d images selected already</string>
    <string name="min_count_msg">you have to choice %1$d images</string>
    <string name="focusing">focusing/flash...wait a minute</string>
    <string name="default_directory">Pictures</string>


</resources>